sumo/tests/sumo/errors/network/testsuite.sumo
ok

edges

node_count

edge

junction
